--- a/src/Configurations/Conditions/Condition/style.css
+++ b/src/Configurations/Conditions/Condition/style.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 25%;
   display: flex;
-  border-bottom: solid 1px black;
+  border-bottom: solid 1px #00a085;
   padding: 0.2%;
   align-items: center;
 }
