--- a/src/Configurations/Conditions/Signal/style.css
+++ b/src/Configurations/Conditions/Signal/style.css
@@ -7,6 +7,8 @@
   height: 40px;
   box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.15);
   margin: 0 0.5%;
+  cursor: pointer;
+  background-color: white;
 }
 
 .signal > strong {
