--- a/src/Configurations/Worker/style.css
+++ b/src/Configurations/Worker/style.css
@@ -2,7 +2,8 @@
   display: flex;
   padding: 1%;
   height: 20%;
-  border-bottom: solid 1px black;
+  border-bottom: solid 1px #00a085;
+  background-color: white;
 }
 
 .worker-cdjbh > p {
