--- a/src/Configurations/Workers/style.css
+++ b/src/Configurations/Workers/style.css
@@ -1,5 +1,5 @@
 .workers {
-  width: 35%;
+  width: 30%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -14,6 +14,7 @@
   text-align: center;
   width: 100%;
   margin: 0;
+  color: #066d5c;
 }
 
 .workers > .container {
