--- a/src/Combinations/Combination/Team/style.css
+++ b/src/Combinations/Combination/Team/style.css
@@ -1,11 +1,12 @@
 .team {
-  padding: 0.5% 0;
   display: flex;
   width: 100%;
+  height: 70%;
 }
 
 .team > .material-icons {
   font-size: 1.3em;
+  height: 1.3em;
   cursor: pointer;
 }
 
