--- a/src/Components/Worker/style.css
+++ b/src/Components/Worker/style.css
@@ -1,17 +1,16 @@
 .worker {
   display: flex;
   align-items: center;
-  padding: 0.3% 1%;
+  padding: 0.3em 0.3em;
   border-radius: 5px;
   box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.15);
-  height: 90%;
-  margin: 0.2%;
+  margin: 0 1%;
   background-color: white;
 }
 
 .worker > p {
   font-size: 1em;
-  margin: 5%;
+  margin: 0 0.5em;
 }
 
 .worker > img {
