--- a/src/Configurations/Conditions/Signal/style.css
+++ b/src/Configurations/Conditions/Signal/style.css
@@ -6,12 +6,12 @@
   width: 40px;
   height: 40px;
   box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.15);
-  margin: 0 0.5%;
   cursor: pointer;
+  margin-left: 5%;
   background-color: white;
 }
 
 .signal > strong {
   font-size: 1em;
-  margin: 0;
+  margin: 1%;
 }
