--- a/src/Configurations/Conditions/Condition/style.css
+++ b/src/Configurations/Conditions/Condition/style.css
@@ -1,7 +1,7 @@
 .condition {
-  width: 100%;
-  height: 25%;
-  display: flex;
-  border-bottom: solid 1px #00a085;
   align-items: center;
+  border-bottom: solid 1px #00a085;
+  display: flex;
+  padding: 0.4%;
+  width: 100%;
 }
