--- a/src/Configurations/Conditions/Signal/style.css
+++ b/src/Configurations/Conditions/Signal/style.css
@@ -7,7 +7,8 @@
   height: 40px;
   box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.15);
   cursor: pointer;
-  margin-left: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
   background-color: white;
 }
 
