--- a/src/Configurations/Worker/style.css
+++ b/src/Configurations/Worker/style.css
@@ -1,12 +1,17 @@
 .worker-cdjbh {
-  display: flex;
-  padding: 1%;
-  height: 20%;
-  border-bottom: solid 1px #00a085;
+  align-items: center;
   background-color: white;
+  border-bottom: solid 1px #00a085;
+  display: flex;
+  height: 20%;
+  padding: 1%;
 }
 
-.worker-cdjbh > p {
+.worker-cdjbh > p:nth-child(1) {
+  padding: 0.5%;
+}
+
+.worker-cdjbh > p:nth-child(2) {
   width: 100%;
   font-size: 1.1em;
   padding: 1.5% 2.5%;
@@ -18,5 +23,5 @@
 .worker-cdjbh > img {
   width: 40px;
   border-radius: 20px;
-  margin-left: 2%;
+  margin: 0 3%
 }
